main.py update and html update

--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -22,98 +22,7 @@
 
     <!--main body-->
     <div class="container starter-template">
-          <h1>Chord Identifier</h1>
+          <h1>zip code - {{video}} /<h1>
     </div>
-
-    <div class="container starter-template">
-        <iframe class="video-embed" src="https://www.youtube.com/embed/{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-
-    <!--Horizontal table-->
-    <div class="container width-override">
-      <table class="table leftbar fix-height">
-        <tr><th>Time</th></tr>
-        <tr><th>Root</th></tr>
-        <tr><th>Quality</th></tr>
-        <tr><th>Add</th></tr>
-        <tr><th>Inversion</th></tr>
-        <tr><th>Play it!</th></tr>
-      </table>
-
-      <table class="table scrollable fix-height">
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td>{{ row['time'] }}</td>
-          {% endfor %}
-        </tr>
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td>{{ row['root'] }}</td>
-          {% endfor %}
-        </tr>
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td>{{ row['quality'] }}</td>
-          {% endfor %}
-        </tr>
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td>{{ row['interval'] }}</td>
-          {% endfor %}
-        </tr>
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td>{{ row['inv'] }}</td>
-          {% endfor %}
-        </tr>
-        <tr>
-          {% for i,row in predictions.iterrows() %}
-            <td><button class="tone" data-notes="{{ row['notes'] }}">&nbsp;&nbsp;&nbsp;</button></td>
-          {% endfor %}
-        </tr>
-      </table>
-    </div>
-
-     <div class = "container starter-template">
-
-       <form action="/output" method="GET">
-         <div class="form-group">
-           <label for="youtube_url">Another one?</label>
-           <input type="text" id="youtube_url" name='youtube_url' placeholder="url here">
-         </div>
-
-         <div>
-           <button type="submit" class="btn btn-default btn-lg">Get the chords</button>
-         </div>
-
-       </form>
-     </div>
-     </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>-->
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js"></script>
-    <script>
-
-    var synth = new Tone.PolySynth(5).toMaster()
-
-    for (button of document.getElementsByClassName('tone')) {
-      button.addEventListener('click', (e) => {
-        var note_list = e.target.getAttribute("data-notes").split(' ');
-        var counter = 0
-        for (note of note_list) {
-          synth.triggerAttackRelease(note, 0.4-counter,'+' + counter.toString(10));
-          counter += 0.05
-        }
-        //var note_list = e.target.getAttribute("data-notes").split(' ');
-        //  synth.triggerAttackRelease(note_list, '0.25');
-       });
-     }
-    </script>
   </body>
 </html>
