output.html update

--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -23,6 +23,9 @@
     <!--main body-->
     <div class="container starter-template">
           <h1>zip code - {{video}} /<h1>
+            <table class="table scrollable fix-height">
+              {{table_html}}
+            </table>  
     </div>
   </body>
 </html>
