--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -24,8 +24,8 @@
     <div class="container starter-template">
           <h1>zip code - {{video}} /<h1>
             <table class="table scrollable fix-height">
-              {{table_html}}
-            </table>  
+              <tr><td>1575484925.3037</td><td>162</td><td>Parma<td><td>7400 Brookpark Rd</td><td>Cleveland</td><td>OH<td><td>44129</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>279</td><td>North Olmsted<td><td>5140 Great Northern Plz S</td><td>North Olmsted</td><td>OH<td><td>44070</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>285</td><td>Akron<td><td>96 Rothrock Rd</td><td>Akron</td><td>OH<td><td>44321</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>286</td><td>North Canton<td><td>6595 Strip Ave NW</td><td>North Canton</td><td>OH<td><td>44720</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>407</td><td>Gratiot<td><td>30701 Gratiot Ave</td><td>Roseville</td><td>MI<td><td>48066</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>1406</td><td>Allen Park<td><td>3349 Fairlane Dr</td><td>Allen Park</td><td>MI<td><td>48101</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>1095</td><td>Chesterfield<td><td>50400 Waterside Dr</td><td>Chesterfield</td><td>MI<td><td>48051</td><td>airpods</td><td>6084400.0</td><td></tr>', '<tr><td>1575484925.3037</td><td>585</td><td>North Hills<td><td>4801 McKnight Rd</td><td>Pittsburgh</td><td>PA<td><td>15237</td><td>airpods</td><td>6084400.0</td><td></tr>
+            </table>
     </div>
   </body>
 </html>
