fixed table output and variable names

--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -32,8 +32,8 @@
 
         <form action="/output" method="GET">
           <div class="form-group">
-            <label for="youtube_url">Enter a Zip Code</label>
-            <input type="text" id="youtube_url" name='youtube_url'
+            <label for="zip_code">Enter a Zip Code</label>
+            <input type="text" id="zip_code" name='zip_code'
               placeholder="Zip Code" value="{{ preset_url if preset_url else '' }}">
           </div>
 
