--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -1,60 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-    <title>Chord Identifier</title>
+<head>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <title>Product Finder</title>
 
-    <!-- Custom styles for this template -->
-    <link href="../static/css/starter-template.css" rel="stylesheet">
-  </head>
+  <!-- Bootstrap core CSS -->
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-  <body>
-    <br><br>
+</head>
 
-    <!--main body-->
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-
-      <div class="starter-template">
-          <h2>Store Locator</h2>
+      <a class="navbar-brand" href="#">Product Finder</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
       </div>
-
-      <div class = "container starter-template">
-
-        <form action="/output" method="GET">
-          <div class="form-group">
-            <label for="zip_code">Enter a Zip Code</label>
-            <input type="text" id="zip_code" name='zip_code'
-              placeholder="Zip Code" value="{{ preset_url if preset_url else '' }}">
-          </div>
-
-          <div>
-            <button type="submit" class="btn btn-default btn-lg">Search</button>
-          </div>
-
-        </form>
-      </div>
-
-
     </div>
-    <!-- /.container -->
+  </nav>
+
+  <!-- Page Content -->
+
+  <div class="container" style="margin-top: 8%;">
+  <div class="col-md-6 col-md-offset-3">
+  <div class="row">
+  <div id="logo" class="text-center">
+        <h2>Store Locator</h2>
+    </div>
+    <div>
+  <form action="/output" method="GET" id="form-buscar">
+  <div class="form-group">
+  <div class="input-group">
+  <input id="1" class="form-control" type="text" name="search" placeholder="Zip Code or Address" value="{{ preset_url if preset_url else '' }}"/>
+        <span class="input-group-btn">
+        <button class="btn btn-success" type="submit">
+        <i class="glyphicon glyphicon-search" aria-hidden="true"></i> Search
+        </button>
+        </span>
+      </div>
+        </div>
+        </div>
+        </form>
+        </div>
+        </div>
+      </div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>-->
-    <script src="static/js/bootstrap.min.js"></script>
-  </body>
+  <!-- Bootstrap core JavaScript -->
+  <!-- <script src="vendor/jquery/jquery.slim.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
