--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -42,7 +42,7 @@
   <form action="/output" method="GET" id="form-buscar">
   <div class="form-group">
   <div class="input-group">
-  <input id="1" class="form-control" type="text" name="search" placeholder="Zip Code or Address" value="{{ preset_url if preset_url else '' }}"/>
+  <input id="1" class="form-control" type="text" name="location" placeholder="Zip Code or Address" value="{{ preset_url if preset_url else '' }}"/>
         <span class="input-group-btn">
         <button class="btn btn-success" type="submit">
         <i class="glyphicon glyphicon-search" aria-hidden="true"></i> Search
