--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Product Finder</a>
+      <a class="navbar-brand" href="/">Product Finder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,7 +31,7 @@
   </nav>
     <!--main body-->
     <div class="container starter-template">
-      <h1> Stores In Your Area </h1>
+      <h1> Stores In Your Area With {{ product }} In Stock </h1>
 
     </div>
     <div class="container starter-template">
@@ -57,6 +57,5 @@
           </tbody>
         </table>
     </div>
-
   </body>
 </html>
