--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -10,9 +10,6 @@
 
   <title>Product Finder</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -20,7 +17,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Product Finder</a>
+      <a class="navbar-brand" href="/">Product Finder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,12 +33,23 @@
   <div class="col-md-6 col-md-offset-3">
   <div class="row">
   <div id="logo" class="text-center">
+
         <h2>Store Locator</h2>
     </div>
     <div>
   <form action="/output" method="GET" id="form-buscar">
   <div class="form-group">
   <div class="input-group">
+    <div class = "container">
+    	<form  action="/output" method="GET">
+    	<div class="form-group">
+    	  <label for="School">Product:</label>
+        <select id="mySelect" name="Product">
+          <option value="AirPods">AirPods</option>
+          <option value="AirPods Pro">AirPods Pro</option>
+        </select>
+      </div>
+    </div>
   <input id="1" class="form-control" type="text" name="location" placeholder="Zip Code or Address" value="{{ preset_url if preset_url else '' }}"/>
         <span class="input-group-btn">
         <button class="btn btn-success" type="submit">
@@ -49,18 +57,22 @@
         </button>
         </span>
       </div>
-        </div>
-        </div>
-        </form>
-        </div>
-        </div>
-      </div>
+    </div>
+  </div>
+</form>
+</div>
+</div>
+</div>
 
 
   <!-- Bootstrap core JavaScript -->
   <!-- <script src="vendor/jquery/jquery.slim.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/js/bootstrap.bundle.js"></script>
+  <script src="static/js/droopdown.js"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
 
 </body>
 
