fixed distances and mapping locations from sql db

--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -47,11 +47,15 @@
           <tbody>
             {% for row in table %}
                 <tr>
-                    {% for item in row %}
+                    {% for item in row[:-1] %}
                     <td>
                         {{ item }}
                     </td>
                     {% endfor %}
+
+                    <td>
+                        {{ row[-1] }} mi.
+                    </td>
                 </tr>
             {% endfor %}
           </tbody>
