--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -1,79 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="eng">
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Product Finder</title>
-
+  <meta charset="UTF-8">
+  <meta name="vewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>WherePods</title>
+  <link rel="stylesheet" href="static/css/main.css">
 </head>
 
+
 <body>
+  <main>
+    <form action="/output" method="GET">
+      <label for="location">Find AirPods Pro<sup>TM</sup> in stock.</label><br>
+      <input type="text" name="location" id="location" placeholder="Address or Zip Code">
+    </form>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">Product Finder</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-      </div>
-    </div>
-  </nav>
-
-  <!-- Page Content -->
-
-  <div class="container" style="margin-top: 8%;">
-  <div class="col-md-6 col-md-offset-3">
-  <div class="row">
-  <div id="logo" class="text-center">
-
-        <h2>Store Locator</h2>
-    </div>
-    <div>
-  <form action="/output" method="GET" id="form-buscar">
-  <div class="form-group">
-  <div class="input-group">
-    <div class = "container">
-    	<form  action="/output" method="GET">
-    	<div class="form-group">
-    	  <label for="School">Product:</label>
-        <select id="mySelect" name="Product">
-          <option value="AirPods">AirPods</option>
-          <option value="AirPods Pro">AirPods Pro</option>
-        </select>
-      </div>
-    </div>
-  <input id="1" class="form-control" type="text" name="location" placeholder="Zip Code or Address" value="{{ preset_url if preset_url else '' }}"/>
-        <span class="input-group-btn">
-        <button class="btn btn-success" type="submit">
-        <i class="glyphicon glyphicon-search" aria-hidden="true"></i> Search
-        </button>
-        </span>
-      </div>
-    </div>
-  </div>
-</form>
-</div>
-</div>
-</div>
-
-
-  <!-- Bootstrap core JavaScript -->
-  <!-- <script src="vendor/jquery/jquery.slim.min.js"></script> -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="static/js/bootstrap.bundle.js"></script>
-  <script src="static/js/droopdown.js"></script>
-  <!-- Bootstrap core CSS -->
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-
+  </main>
 </body>
+
 
 </html>
