--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -7,59 +7,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <title>Product Finder</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="static/css/results.css">
+  <title>WherePods</title>
+  
 
 </head>
 
 <body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">Product Finder</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-      </div>
-    </div>
-  </nav>
-    <!--main body-->
-    <div class="container starter-template">
-      <h1> Stores In Your Area With {{ product }} In Stock </h1>
-
-    </div>
-    <div class="container starter-template">
-        <table class="table table-hover">
-          <thead class="thead-dark">
-          <tr>
-              <td> City </td>
-              <td> State </td>
-              <td> Address </td>
-              <td> Zip Code </td>
-            </tr>
-          </thead>
-          <tbody>
-            {% for row in table %}
-                <tr>
-                    {% for item in row[:-1] %}
-                    <td>
-                        {{ item }}
-                    </td>
-                    {% endfor %}
-
-                    <td>
-                        {{ row[-1] }} mi.
-                    </td>
-                </tr>
+  <main>
+    
+    <h1> Stores In Your Area</h1>
+    <table class="results">
+        
+      {% for row in table %}
+        
+        <tr class="spaceunder">
+            {% for item in row[:-1] %}
+            <td>
+                {{ item }}
+            </td>
             {% endfor %}
-          </tbody>
-        </table>
-    </div>
-  </body>
+
+            <td>
+                {{ row[-1] }} mi.
+            </td>
+        </tr>
+        
+      {% endfor %}
+        
+    </table>
+
+  </main>
+    
+</body>
 </html>
