--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -16,8 +16,8 @@
 <body>
   <main>
     
-    <h1> Stores In Your Area</h1>
-    <table class="results">
+    <label for="table"> Stores In Your Area</label>
+    <table class="results" id="table" align="center">
         
       {% for row in table %}
         
