--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -15,13 +15,22 @@
 
 <body>
   <main>
+
+    <a href="/">
+      <img src="../static/images/backbutton.svg" alt="back button" class="back">
+    </a>
     
-    <label for="table"> Stores In Your Area</label>
     <table class="results" id="table" align="center">
-        
+    <!-- <caption style="text-align:left">Stores In Your Area</caption> -->
+      <tr class="table-title">
+        <TH COLSPAN=3 style="text-align:left">
+         <H3>Found 13 stores near you...</H3>
+        </TH>
+      </tr>
+
       {% for row in table %}
         
-        <tr class="spaceunder">
+        <!-- <tr class="spaceunder">
             {% for item in row[:-1] %}
             <td>
                 {{ item }}
@@ -31,6 +40,12 @@
             <td>
                 {{ row[-1] }} mi.
             </td>
+        </tr> -->
+
+        <tr>          
+            <td class="left">{{ row[1] }}</td>
+            <td>{{ row[3] + ', ' + row[4] }}</td>
+            <td class="right">{{ row[5] }} mi. </td>
         </tr>
         
       {% endfor %}
